FIX: CSS alignment for buttons with selector [branches/20240604_acota_q13172][q13172]
git-svn-id: http://svn.resourcespace.com/svn/rs/branches/20240604_acota_q13172@24531 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -109,7 +109,7 @@ button, input[type=submit], input[type=button], .RecordPanel .RecordDownloadSpac
     padding: 0 1rem;
     vertical-align: middle;
     display: block;
-    margin: 0.3rem 0;
+    margin: 0.15rem 0 0.3rem 0;
 }
 
 button, input[type=submit], input[type=button], .RecordPanel .RecordDownloadSpace .DownloadDBlend a {
